assets/css/app.css
/* ... */
:root.dark {
	--evcc-grid: var(--bs-gray-medium);
	--evcc-background: var(--bs-gray-deep);
	--evcc-box: var(--bs-gray-dark);
	--evcc-box-border: var(--vs-gray-darker);
	--evcc-default-text: var(--bs-white);
	--evcc-gray: var(--bs-gray-light);
	--evcc-accent1: var(--evcc-yellow);
	--evcc-accent2: var(--evcc-dark-green);
	--evcc-accent3: var(--evcc-darker-green);
	--bs-primary: var(--evcc-dark-green);
	--bs-border-color-translucent: rgba(255, 255, 255, 0.175);
	--bs-code-color: var(--evcc-dark-green);
	--evcc-backdrop: #000000aa; /* black + transparent */
	color-scheme: dark;
}

html {
	/* prevents content jump when scrollbar is activate */
	width: 100vw;
	overflow-x: hidden;
}

html.no-transitions * {
	transition: none !important;
}

body {
	background-color: var(--evcc-background);
	color: var(--evcc-default-text);
}

h1,
h2,
h3,
h4 {
	font-weight: bold;
}

h1,
h2 {
	font-size: 1.25rem;
	text-transform: uppercase;
}

h3,
h4 {
	font-size: 1.25rem;
}

h5 {
	font-size: 1rem;
	font-weight: bold;
}

.large {
	font-size: 1.25rem;
	line-height: 1.2;
}

.bg-primary {
	background-color: var(--evcc-dark-green) !important;
}

.bg-dark-green {
	background-color: var(--evcc-dark-green) !important;
}

.bg-darker-green {
	background-color: var(--evcc-darker-green) !important;
}

.bg-darkest-green {
	background-color: var(--evcc-darkest-green) !important;
}

.text-primary {
	color: var(--bs-primary) !important;
}

a {
	color: var(--bs-primary);
}

a:hover {
	color: var(--evcc-accent3);
}

/* reverse loading animation */
.progress-bar-animated {
	animation-direction: reverse;
}
.bg-muted {
	opacity: 0.25;
}

.rounded {
	border-radius: 10px !important;
}

.btn {
	--bs-btn-border-width: 2px;
}

.btn-primary,
.btn-primary:focus {
	background-color: var(--bs-primary);
	border-color: var(--bs-primary);
	color: var(--evcc-background);
}

.btn-primary:hover {
	background-color: var(--evcc-accent3);
	border-color: var(--evcc-accent3);
}

.btn-primary:active {
	color: var(--evcc-default-text) !important;
	background-color: var(--evcc-accent3) !important;
	border-color: var(--evcc-accent3) !important;
}

.btn:disabled {
	color: inherit !important;
	background-color: inherit !important;
	border-color: inherit !important;
	opacity: 0.2;
}

.btn-outline-primary {
	--bs-btn-active-bg: var(--bs-primary);
	--bs-btn-active-border-color: var(--bs-primary);
}

.btn-outline-primary,
.btn-outline-primary:focus {
	color: var(--bs-primary);
	background-color: transparent;
	border-color: var(--bs-primary);
}

.btn-outline-primary:hover {
	color: var(--evcc-accent3) !important;
	background-color: transparent !important;
	border-color: var(--evcc-accent3) !important;
}

.btn-group > .btn-check + .btn-outline-primary:hover,
.btn-outline-primary:active {
	color: var(--bs-white) !important;
	background-color: var(--evcc-accent3) !important;
	border-color: var(--evcc-accent3) !important;
}

.btn-xs {
	--bs-btn-padding-y: 0;
	--bs-btn-padding-x: 0.5rem;
	--bs-btn-font-size: 0.7rem;
	--bs-btn-border-radius: 0.25rem;
	--bs-btn-line-height: 2;
}

.btn-outline-secondary {
	--bs-btn-color: var(--evcc-default-text);
	--bs-btn-border-color: var(--evcc-default-text);
	--bs-btn-hover-bg: transparent;
	--bs-btn-hover-color: var(--bs-gray-medium);
	--bs-btn-hover-border-color: var(--bs-gray-medium);
}

.dark .btn-outline-secondary {
	--bs-btn-color: var(--bs-gray-bright);
	--bs-btn-border-color: var(--bs-gray-bright);
	--bs-btn-hover-bg: transparent;
	--bs-btn-hover-color: var(--bs-gray-medium);
	--bs-btn-hover-border-color: var(--bs-gray-medium);
}

.accordion {
	--bs-accordion-active-color: var(--bs-text);
	--bs-accordion-active-bg: var(--evcc-background);
	--bs-accordion-btn-active-icon: var(--bs-accordion-btn-icon);
}

.text-evcc {
	color: var(--evcc-dark-green);
}
.text-accent1 {
	color: var(--evcc-accent1);
}
.text-accent2 {
	color: var(--evcc-accent2);
}
.text-accent3 {
	color: var(--evcc-accent3);
}

.evcc-default-text {
	color: var(--evcc-default-text) !important;
}
.evcc-gray {
	color: var(--evcc-gray);
}
.text-grid {
	color: var(--evcc-grid);
}
.text-dark {
	color: var(--bs-gray-dark);
}
.text-light {
	color: var(--bs-gray-bright);
}
.text-gray {
	color: var(--bs-gray-medium);
}
.text-gray-medium {
	color: var(--bs-gray-medium);
}
.text-gray-light {
	color: var(--bs-gray-light);
}
.bg-dark {
	background-color: var(--bs-gray-dark) !important;
}

@media screen and (min-width: 400px) and (max-width: 574px) {
	.d-xs-none {
		display: none !important;
	}
	.d-xs-inline {
		display: inline !important;
	}
}

/* breakpoint lg */
@media (min-width: 992px) {
	.modal-lg,
	.modal-xl {
		--bs-modal-width: 850px;
	}
	.w-lg-auto {
		width: auto !important;
	}
}

.modal-backdrop.show {
	opacity: 1;
}

.modal-backdrop {
	--bs-backdrop-bg: var(--evcc-backdrop);
	-webkit-backdrop-filter: blur(8px);
	backdrop-filter: blur(8px);
}

.modal-backdrop.fade {
	transition-property: opacity, backdrop-filter, background-color;
	transition-duration: var(--evcc-transition-fast);
	transition-timing-function: linear;
}

.modal-header {
	padding: 0 0 1rem 0;
	border: none;
}

.modal-title {
	font-weight: bold;
	font-size: 1.25rem;
}

.modal-content {
	border-radius: 1rem;
	padding: 1.25rem;
	background-color: var(--evcc-box);
	color: var(--evcc-default-text);
}

.modal-content h6 {
	margin-top: 2rem;
	margin-bottom: 1.5rem;
	font-size: 1rem;
	font-weight: bold;
}

/* breakpoint sm */
@media (min-width: 576px) {
	.modal-content {
		padding: 2rem;
	}
}

.modal-body {
	padding: 1rem 0 0;
}

.modal-footer {
	padding: 1rem 0 0;
	border: none;
}

.modal-footer > * {
	margin: 0;
}

html:has(.modal.show) {
	overflow-y: hidden;
}

.cursor-pointer {
	cursor: pointer;
}

.v-popper__inner {
	margin: 0 12px !important;
}

.small,
small {
	font-size: var(--bs-body-font-size);
	color: var(--bs-gray-medium) !important;
}

.btn-close {
	opacity: 1;
}

.dark .btn-close {
	filter: invert(1);
}
/* ... */

